--- a/quarto/precalc/numbers_types.qmd
+++ b/quarto/precalc/numbers_types.qmd
@@ -101,7 +101,7 @@ Rather than give an error though, `Julia` gives seemingly arbitrary answers, as 
 2^62, 2^63
 ```
 
-(They aren't arbitrary, as explained previosly.)
+(They aren't arbitrary, as explained previously.)
 
 
 This could be worked around, as it is with some programming languages, but it isn't, as it would slow down this basic computation. So, it is up to the user to be aware of cases where their integer values can grow to big. The suggestion is to use floating point numbers in this domain, as they have more room, at the cost of sometimes being approximate values for fairly large values.
